Version 0.11.0
2022-03-12

[Feature] The update check was made optional (default: false).
[Changed] Rearranged the build options panel so it won't look as misaligned as it actually was.
[Changed] The required SSL libraries are shipped with the Windows package now.

-------------------------------

Version 0.10.1
2022-03-10

[Bugfix] When editing an unsaved document, the status panel will (correctly) display "[unsaved file]" now.
[Bugfix] Windows builds still had a seemingly broken update check. Fixed the status display.

-------------------------------

Version 0.10.0
2022-03-10

[Feature] Log file creation.
[Changed] Replaced the build output window by a status window.
[Bugfix] Windows builds erroneously showed "-1" in the update status field.
[Bugfix] Building a document without a macro package works now.

-------------------------------

Version 0.9.9.1
2022-03-10

[Feature] macOS builds are working now.
[Feature] First macOS release.

-------------------------------

Version 0.9.9.0
2022-02-24

[Feature] First working version.